# bx

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/scripts/: update_formula.py
.github/workflows/: release.yml
Formula/: bx.rb
src/: asset.rs  cache.rs  checksum.rs  error.rs  exec.rs  fetch.rs  github.rs  lib.rs  main.rs  manifest.rs  platform.rs  prune.rs  spec.rs
tests/: end_to_end.rs
