[package]
name = "bx"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Run binaries from GitHub releases. npx for compiled tools, with MCP-server smarts."
license = "MIT"
repository = "https://github.com/grahambrooks/bx"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
directories = "5"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
